--- a/Fronted_Portfolio/src/index.css
+++ b/Fronted_Portfolio/src/index.css
@@ -1,11 +1,12 @@
 @import "tailwindcss";
 
-html, body {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    background-image: url('body_img.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+html,
+body {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background-image: url("body_img.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
