--- a/Fronted_Portfolio/src/index.css
+++ b/Fronted_Portfolio/src/index.css
@@ -2,11 +2,42 @@
 
 html,
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  background-image: url("body_img.jpg");
+  margin: 0;
+  padding: 0;
+  background-image: url("/body_img.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+@font-face {
+  font-family: "Georama";
+  src: url("/fonts/Georama-VariableFont_wdth,wght.ttf") format("truetype"); /* in public/fonts */
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+.text-georama {
+  font-family: "Georama", sans-serif;
+}
+
+.char {
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.lm-char {
+  -webkit-user-select: none;
+  user-select: none;
+  line-height: 1;
+  padding: 0 0.5px;
+}
+
+.lm-wrapper {
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
