--- a/Fronted_Portfolio/src/index.css
+++ b/Fronted_Portfolio/src/index.css
@@ -41,3 +41,31 @@ body {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
+
+.tooltip {
+  padding: 4px 8px !important;
+  font-size: 11px !important;
+  font-weight: 500;
+
+  border-radius: 6px !important;
+
+  background: rgba(241, 239, 239, 0.75) !important;
+  color: black !important;
+
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+
+  transform: translateY(-4px);
+  transition: all 0.15s ease-in-out;
+}
+.tooltip[data-state="delayed-open"] {
+  opacity: 1;
+  transform: translateY(-6px);
+}
+
+.tooltip[data-state="closed"] {
+  opacity: 0;
+  transform: translateY(0px);
+}
